--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,49 @@
 {
     "name": "swiftmade/statamic-clear-assets",
+    "license": "MIT",
+    "type": "statamic-addon",
+    "description": "Deletes unused assets. Saves storage space.",
+    "homepage": "https://statamic.com/addons/swiftmade/clear-assets",
+    "authors": [
+        {
+            "name": "Ahmet Ozisik",
+            "email": "ahmet@swiftmade.co",
+            "homepage": "https://swiftmade.co",
+            "role": "Founder"
+        }
+    ],
+    "require": {
+        "php": "^7.4|^8.0",
+        "laravel/framework": "^7.30.3 || ^8.24 || ^9.0",
+        "statamic/cms": "^3.0.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.8",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1 || ^5.0 || ^6.0",
+        "orchestra/testbench": "^6.9|^7.1",
+        "phpunit/phpunit": "^9.5"
+    },
     "autoload": {
         "psr-4": {
             "Swiftmade\\StatamicClearAssets\\": "src"
         }
     },
-    "require": {
-        "php": "^7.4|^8.0",
-        "statamic/cms": "^3.0.0"
+    "autoload-dev": {
+        "psr-4": {
+            "Swiftmade\\StatamicClearAssets\\Tests\\": "tests"
+        }
     },
     "extra": {
         "statamic": {
             "name": "Statamic Clear Assets",
-            "description": "Statamic Clear Assets addon"
+            "description": "Deletes unused assets."
         },
         "laravel": {
             "providers": [
                 "Swiftmade\\StatamicClearAssets\\ServiceProvider"
             ]
         }
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.8"
     },
     "config": {
         "allow-plugins": {
