--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^7.30.3 || ^8.24 || ^9.0",
+        "laravel/framework": "^7.30.3 || ^8.24 || ^9.0 || ^10.",
         "statamic/cms": "^3.0.0"
     },
     "require-dev": {
