--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,13 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^7.30.3 || ^8.24 || ^9.0 || ^10.",
+        "laravel/framework": "^7.30.3 || ^8.24 || ^9.0",
         "statamic/cms": "^3.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
-        "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1 || ^5.0 || ^6.0",
-        "orchestra/testbench": "^6.9|^7.1",
+        "orchestra/testbench": "^5.0|^6.0|^7.0",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
