--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,13 @@ jobs:
             php: 7.4
           - laravel: 10.*
             statamic: 3.*
+          - laravel: 10.*
+            php: 7.4
+          - laravel: 10.*
+            php: 8.0                        
         dependency-version: [prefer-stable]
 
-    name: P${{ matrix.php }} - ${{ matrix.laravel }} - ${{ matrix.statamic }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - S${{ matrix.statamic }}
 
     steps:
       - name: Checkout code
