--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
             php: 8.2
           - laravel: 9.*
             php: 7.4
+          - laravel: 8.*
+            statamic: 4.*            
           - laravel: 10.*
             statamic: 3.*
           - laravel: 10.*
