--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,8 @@ jobs:
           - laravel: 11.*
             php: 8.0
           - laravel: 11.*
+            php: 8.1            
+          - laravel: 11.*
             statamic: 3.*
           - laravel: 11.*
             statamic: 4.*
