--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,4 @@
 name: run-tests
-
 on: [push]
 
 jobs:
@@ -8,22 +7,38 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [7.4, 8.0, 8.1, 8.2]
-        laravel: [8.*, 9.*, 10.*]
-        statamic: [3.*, 4.*]
-        exclude:      
+        php: [7.4, 8.0, 8.1, 8.2, 8.3]
+        laravel: [8.*, 9.*, 10.*, 11.*]
+        statamic: [3.*, 4.*, 5.*]
+        exclude:
           - laravel: 8.*
             php: 8.2
-          - laravel: 9.*
-            php: 7.4
+          - laravel: 8.*
+            php: 8.3
+          - laravel: 8.*
+            statamic: 5.*
           - laravel: 8.*
             statamic: 4.*
+          - laravel: 9.*
+            php: 7.4
+          - laravel: 9.*
+            statamic: 5.*
           - laravel: 10.*
             statamic: 3.*
           - laravel: 10.*
             php: 7.4
           - laravel: 10.*
             php: 8.0
+          - laravel: 11.*
+            php: 7.4
+          - laravel: 11.*
+            php: 8.0
+          - laravel: 11.*
+            php: 8.1            
+          - laravel: 11.*
+            statamic: 3.*
+          - laravel: 11.*
+            statamic: 4.*
         dependency-version: [prefer-stable]
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - S${{ matrix.statamic }}
