--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
       fail-fast: true
       matrix:
         php: [7.4, 8.0, 8.1, 8.2, 8.3]
-        laravel: [8.*, 9.*, 10.*, 11.*]
+        laravel: [8.*, 9.*, 10.*, 11.*, 12.*]
         statamic: [3.*, 4.*, 5.*]
         exclude:
           - laravel: 8.*
@@ -34,11 +34,21 @@ jobs:
           - laravel: 11.*
             php: 8.0
           - laravel: 11.*
-            php: 8.1            
+            php: 8.1
           - laravel: 11.*
             statamic: 3.*
           - laravel: 11.*
             statamic: 4.*
+          - laravel: 12.*
+            php: 7.4
+          - laravel: 12.*
+            php: 8.0
+          - laravel: 12.*
+            php: 8.1
+          - laravel: 12.*
+            statamic: 3.*
+          - laravel: 12.*
+            statamic: 4.*            
         dependency-version: [prefer-stable]
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - S${{ matrix.statamic }}
