--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "friendsofphp/php-cs-fixer": "^3.8",
         "nunomaduro/collision": "^4.1|^5.0|^6.0|^8.1",
         "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0",
-        "phpunit/phpunit": "^9.5|^10.0"
+        "phpunit/phpunit": "^9.5|^10.0|^11.0"
     },
     "autoload": {
         "psr-4": {
