--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         php: [7.4, 8.0, 8.1, 8.2, 8.3]
         laravel: [8.*, 9.*, 10.*, 11.*, 12.*]
-        statamic: [3.*, 4.*, 5.*]
+        statamic: [3.*, 4.*, 5.*, 6.*]
         exclude:
           - laravel: 8.*
             php: 8.2
@@ -48,7 +48,19 @@ jobs:
           - laravel: 12.*
             statamic: 3.*
           - laravel: 12.*
-            statamic: 4.*            
+            statamic: 4.*
+          - laravel: 8.*
+            statamic: 6.*
+          - laravel: 9.*
+            statamic: 6.*
+          - laravel: 10.*
+            statamic: 6.*
+          - statamic: 6.*
+            php: 7.4
+          - statamic: 6.*
+            php: 8.0
+          - statamic: 6.*
+            php: 8.1
         dependency-version: [prefer-stable]
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - S${{ matrix.statamic }}
