--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "laravel/framework": "^7.30.3|^8.24|^9.0|^10.0|^11.0|^12.0",
-        "statamic/cms": "^3.0.0|^4.0|^5.0"
+        "statamic/cms": "^3.0.0|^4.0|^5.0|^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.8",
